<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.MovieOverviewFragment">

    <ImageView
        android:id="@+id/fragment_movie_item_overview_poster"
        android:layout_width="@dimen/fragment_movie_item_overview_poster_width"
        android:layout_height="@dimen/fragment_movie_item_overview_poster_height"
        android:contentDescription="@string/fragment_movie_item_overview_poster_content_description"
        android:foreground="@color/transparent_black"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_movie_item_overview_title"
        android:layout_width="@dimen/fragment_movie_item_overview_title_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_movie_item_overview_title_margin_start"
        android:layout_marginTop="@dimen/fragment_movie_item_overview_title_margin_top"
        android:layout_marginEnd="@dimen/fragment_movie_item_overview_title_margin_end"
        android:text="@string/fragment_movie_item_overview_title"
        android:textColor="@color/white"
        android:textSize="@dimen/fragment_movie_item_overview_title_text_size"
        app:layout_constraintEnd_toStartOf="@+id/fragment_movie_item_overview_rating_textview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fragment_movie_item_overview_rating_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/fragment_movie_item_overview_rating_textview_padding_start"
        android:paddingEnd="@dimen/fragment_movie_item_overview_rating_textview_padding_end"
        android:layout_marginTop="@dimen/fragment_movie_item_overview_rating_textview_margin_top"
        android:layout_marginEnd="@dimen/fragment_movie_item_overview_rating_textview_margin_end"
        android:text="@string/fragment_movie_item_overview_rating_textview_text"
        android:textColor="@color/white"
        android:textSize="@dimen/fragment_movie_item_overview_rating_textview_text_size"
        android:foreground="@drawable/card_border"
        android:drawableStart="@drawable/baseline_star_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/fragment_movie_item_overview_release_date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_movie_item_overview_release_date_text_view_margin_start"
        android:layout_marginBottom="@dimen/fragment_movie_item_overview_release_date_text_view_margin_bottom"
        android:foreground="@drawable/card_border"
        android:padding="@dimen/fragment_movie_item_overview_release_date_text_view_padding"
        android:paddingStart="@dimen/fragment_movie_item_overview_release_date_text_view_padding_start"
        android:paddingEnd="@dimen/fragment_movie_item_overview_release_date_text_view_padding_end"
        android:text="@string/fragment_movie_item_overview_release_date_text_view_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/fragment_movie_item_overview_recyclerview"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_movie_item_overview_recyclerview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_movie_item_overview_recycler_view_margin_start"
        android:layout_marginBottom="@dimen/fragment_movie_item_overview_recycler_view_margin_bottom"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_movie_item_overview_poster"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/fragment_movie_item_overview_overview_text"
        android:layout_width="@dimen/fragment_movie_item_overview_overview_text_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/fragment_movie_item_overview_overview_text_margin_start"
        android:layout_marginTop="@dimen/fragment_movie_item_overview_overview_text_margin_top"
        android:layout_marginEnd="@dimen/fragment_movie_item_overview_overview_text_margin_end"
        android:text="@string/fragment_movie_item_overview_overview_text"
        android:textColor="@color/black"
        android:textSize="@dimen/fragment_movie_item_overview_overview_text_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_movie_item_overview_poster" />

</androidx.constraintlayout.widget.ConstraintLayout>