<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/fragment_home_movie_item_card_view"
        android:layout_marginTop="@dimen/fragment_home_movie_item_card_view_margin_top"
        android:layout_width="@dimen/fragment_home_movie_item_card_view_width"
        android:layout_height="@dimen/fragment_home_movie_item_card_view_height"
        android:layout_marginStart="@dimen/fragment_home_movie_item_card_view_margin_start"
        android:layout_marginEnd="@dimen/fragment_home_movie_item_card_view_margin_end"
        app:cardCornerRadius="@dimen/fragment_home_movie_item_card_view_corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/fragment_home_movie_item_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:contentDescription="@string/fragment_home_movie_item_image_view_content_description" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/fragment_home_movie_item_rating_card_view_corner_radius"
            app:cardBackgroundColor="@color/fragment_home_movie_item_rating_card_view_background_color">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/fragment_home_movie_item_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/fragment_home_movie_item_star_margin_top"
                    android:paddingStart="@dimen/fragment_home_movie_item_star_padding_start"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_star_24"
                    android:contentDescription="@string/fragment_home_movie_item_star_content_description" />

                <TextView
                    android:id="@+id/fragment_home_movie_item_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_movie_item_rating"
                    android:textSize="@dimen/fragment_home_movie_item_rating_text_size"
                    android:paddingEnd="@dimen/fragment_home_movie_item_rating_padding_end"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@+id/fragment_home_movie_item_star"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/fragment_home_movie_item_title"
        android:layout_width="wrap_content"
        android:maxWidth="@dimen/fragment_home_movie_item_title_width"
        android:layout_height="wrap_content"
        android:textSize="@dimen/fragment_home_movie_item_title_text_size"
        android:text="@string/fragment_home_movie_item_title"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_home_movie_item_card_view" />

</androidx.constraintlayout.widget.ConstraintLayout>